@@ -1,3 +1,8 @@
+2006-04-21 Sandro Santilli <strk@refractions.net>
+
+	* source/geom/PrecisionModel.cpp: fixed
+	constructor by type to always initialize scale
+
 2006-04-20 Sandro Santilli <strk@refractions.net>
 
 	* headers/geos/geom/BinaryOp.h: added debugging
